[tool.poetry]
name = "kemono-su-downloader"
version = "0.1.0"
description = ""
authors = ["NovaHFly <mugiviska@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "kemono.py" }]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
tenacity = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
